[package]
name = "modus-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modus-corelib = { path = "../modus/corelib" }
wasm-bindgen = "0.2"
termcolor = "1"
codespan-reporting = "0.11"
ptree = "0.4"

[dependencies.getrandom]
version = "*"
features = ["js"]

[profile.release]
opt-level = "s"
lto = "fat"
