[package]
name = "modus-playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
modus-lib = { path = "../modus/modus-lib" }
wasm-bindgen = "0.2"
termcolor = "1"
codespan-reporting = "0.11"
ptree = { version = "0.4", features = ["ansi"] }

[dependencies.getrandom]
version = "*"
features = ["js"]

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "unwind"
